update password reset

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>비밀번호 변경을 요청하셨습니다. 아래 링크를 통해 변경해주세요.</p>
 
-<p><%= link_to '비밀번호 변경하게', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to '비밀번호 변경하기', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>비밀번호 변경을 요청하시지 않았다면 이 글을 무시해주세요.</p>
 <p>위 링크를 눌러 비밀번호를 변경하실 때까지 기존 비밀번호가 유지됩니다.</p>
